Max Similar Threshold after which similar lps get evaluated and the one with max certainty is displayed

--- a/settings.json
+++ b/settings.json
@@ -31,5 +31,12 @@
      "desc": "Specify the reading certainty threshold in % from 1-100",
      "section": "reader",
      "key": "reading_certainty"
+    },
+  {
+      "type": "numeric",
+     "title": "Maximum Similar Readings",
+     "desc": "Maximum Number of Similar reading after which the one with maximum certainty is displayed",
+     "section": "reader",
+     "key": "max_similar_readings"
     }
 ]
